# osm_establishments

./: .gitignore  Makefile  README.md  pyproject.toml
code/: llm_instructions.md  parse_legal_entities_llm.py  pull_osm_data.py  render_establishments_map.py  scrape_web_for_legal_info.py
