[project]
name = "osm-establishments"
version = "0.1.0"
description = "Scripts for pulling and working with OpenStreetMap establishment data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "geopandas>=1.0.0",
    "litellm>=1.75.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "selenium>=4.21.0",
    "shapely>=2.0.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
package = false
